finetune mac build

--- a/.github/workflows/flutter_mac_build.yml
+++ b/.github/workflows/flutter_mac_build.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Build macOS
         run: flutter build macos
 
-      - name: Upload Artifacts
+      - name: Upload Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: macOS-App
+          name: mac-build-${{ github.run_number }}
           path: build/macos/Build/Products/Release/*.app
