--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,10 +47,12 @@ dependencies:
   shared_preferences: ^2.2.3
   langchain: ^0.6.0
   langchain_openai: any
+  langchain_ollama: any
   intl: ^0.19.0
   whisper: ^0.0.0
   ffmpeg_kit_flutter: ^6.0.3
   flutter_markdown: ^0.7.1
+  window_manager: ^0.3.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
