--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -30,5 +30,7 @@
 	<string>NSApplication</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Some message to describe why you need this permission</string>
+	<key>NSAppleEventsUsageDescription</key>
+	<string>This app requires access to audio output to record system audio.</string>
 </dict>
 </plist>
