--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   ffmpeg_kit_flutter: ^6.0.3
   flutter_markdown: ^0.7.1
   window_manager: ^0.3.8
+  desktop_drop: ^0.4.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
