add local whisper, run in pallel for openai

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "flutter_application_yt",
-    "short_name": "flutter_application_yt",
+    "name": "g_record_helper",
+    "short_name": "g_record_helper",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
