--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   window_manager: ^0.3.8
   desktop_drop: ^0.4.4
   sqflite: ^2.3.3
+  flutter_chat_ui: ^1.6.14
+  flutter_chat_types: ^3.6.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
