--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   sqflite: ^2.3.3
   flutter_chat_ui: ^1.6.14
   flutter_chat_types: ^3.6.2
+  screen_capturer: ^0.2.2
+  cropperx: ^1.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
