--- a/macos/Runner/Release.entitlements
+++ b/macos/Runner/Release.entitlements
@@ -9,6 +9,8 @@
 	<key>com.apple.security.network.client</key>
 	<true/>
 	<key>com.apple.security.temporary-exception.mach-register.global-name</key>
-	<string>com.apple.screencapture.interactive</string>
+    <array>
+        <string>com.apple.screencapture.interactive</string>
+    </array>
 </dict>
 </plist>
