--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   flutter_chat_types: ^3.6.2
   screen_capturer: ^0.2.2
   cropperx: ^1.1.1
+  http: ^1.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
