--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,9 @@ dependencies:
   envied: ^0.5.4
   share_plus: ^9.0.0
   shared_preferences: ^2.2.3
-  langchain: ^0.6.0
-  langchain_openai: any
-  langchain_ollama: any
+  langchain: ^0.7.5
+  langchain_openai: ^0.7.1
+  langchain_ollama: ^0.3.1
   intl: ^0.19.0
   whisper: ^0.0.0
   ffmpeg_kit_flutter: ^6.0.3
