--- a/.github/workflows/flutter_mac_build.yml
+++ b/.github/workflows/flutter_mac_build.yml
@@ -19,16 +19,10 @@ jobs:
           flutter-version: '3.x' # Specify the Flutter version you are using
           channel: 'stable'  # or 'beta' or 'dev'
           architecture: 'arm64'
-
-      - name: Install dependencies
-        run: flutter pub get
-
-      # - name: Run tests
-      #   run: flutter test
-
+      - run: sudo xcode-select --switch /Applications/Xcode_14.3.1.app
+      - run: flutter pub get
       - name: Build macOS
-        run: flutter build macos
-
+        run: flutter build macos --release
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
